--- a/variable/index.html
+++ b/variable/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <h1>Hello world</h1>
+    <h1>Variable in Javascript</h1>
 </body>
 <!-- <script>
     alert("Hello i'm a javascript")
 </script> -->
 
-<script src="hello.js"></script>
+<script src="variable.js"></script>
 
 
 </html>
